src/test/deca/context/valid/ContextAvecObjet/InstanceOf/instanceMethodA.deca
// Description:
//    instance of sortie d'une méthode
//
// Resultats:
//    ok
//
class A{
    Object spawner(){
        return new Object();
    }
}
{
    A a = new A();
    boolean x = a.spawner() instanceof A;
}
