src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/instanceFloat.deca
// Description:
//    instance of float
//
// Resultats:
//    Erreur contextuelle ligne 12
//    float n'est pas une instance de classe
class A{
    Object o = new A();
}
{
    A a = new A();
    boolean x = a.o instanceof float;
}
